solucion de id cliente al crear pedido nuevo desde panel del admin
